--- a/package.json
+++ b/package.json
@@ -1,23 +1,21 @@
 {
-  "name": "randum-bot",
+  "name": "RandUm-Bot",
   "version": "1.0.0",
-  "description": "당신의 디스코드 이름, \r 엄(검열) 처럼 바꿔드립니다.",
+  "description": "당신의 디스코드 이름, 엄(검열) 처럼 바꿔드립니다.",
   "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": "git+https://github.com/Team-WAVE-x/RandUm-Bot.git",
+  "repository": "git@github.com:Team-WAVE-x/RandUm-Bot.git",
   "author": "시혁 박 <exon.indiv@gmail.com>",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/Team-WAVE-x/RandUm-Bot/issues"
-  },
-  "homepage": "https://github.com/Team-WAVE-x/RandUm-Bot#readme",
+  "license": "MIT",
   "dependencies": {
-    "axios": "^0.20.0",
-    "discord.js": "^12.3.1"
+    "discord.js": "^12.4.0",
+    "superagent": "^6.1.0"
   },
   "devDependencies": {
-    "eslint": "^7.11.0"
+    "eslint": "^7.11.0",
+    "eslint-config-standard": "^15.0.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-standard": "^4.0.2"
   }
 }
